add(chat-facade): message controller
